Tue Sep  3 17:06:15 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb
	  (TestRubyOptions::SEGVTest::ExpectedStderr): the URL was changed at
	  r42800.

Tue Sep  3 14:48:25 2013  Zachary Scott  <e@zzak.io>

	* lib/thread.rb: [DOC] CV#wait typo by @avdi [Fixes GH-386]
	  https://github.com/ruby/ruby/pull/386

Tue Sep  3 14:37:53 2013  Zachary Scott  <e@zzak.io>

	* error.c: [DOC] Update bug tracker url by @ScotterC [Fixes GH-390]
	  https://github.com/ruby/ruby/pull/390

Tue Sep  3 12:45:23 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_str2big_poweroftwo): New function.
	  (rb_str2big_normal): Ditto.
	  (rb_str2big_karatsuba): Ditto.

	* internal.h (rb_str2big_poweroftwo): Declared.
	  (rb_str2big_normal): Ditto.
	  (rb_str2big_karatsuba): Ditto.

	* ext/-test-/bignum/str2big.c: New file.

	* test/-ext-/bignum/test_str2big.rb: New file.

	* ext/-test-/bignum/depend: Add the dependency for str2big.c.

Tue Sep  3 12:09:08 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): Support times() based monotonic clock.
	  (rb_clock_getres): Ditto.

Tue Sep  3 12:03:02 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (str2big_scan_digits): Extracted from rb_cstr_to_inum.

Tue Sep  3 11:23:57 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select_with_thread): rounding up the fraction of
	  tv_usec instead of rounding down.
	  this change is an experiment to get rid of failures on vc10-x64 CI.

Tue Sep  3 11:00:28 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (do_select): constify timeout.

	* win32/win32.c (rb_w32_select_with_thread): constify 10ms wait and
	  0ms wait structs.

Tue Sep  3 10:03:42 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/openssl/test_pair.rb
	  (OpenSSL::TestPair#test_write_nonblock_no_exceptions): on some CIs
	  such as Debian 6.0, Ubuntu 10.04, CentOS and vc10-x64 (maybe depend
	  on OpenSSL version), writing to SSLSocket after SSL_ERROR_WANT_WRITE